# Cocanb-bot-new

./: .gitignore  README.md  acknowledgements.py  cocanb.py  main.py  moderation.py  neverSleep.py  pyproject.toml  unicode.py
Resources/: al-Qurʾān.txt  cocaanb.rar  kaczynski_quotes.txt  quran_arabic.txt  quran_sūrah_names.txt  surrogate chars.docx
Resources/Full Unicode Charts/: Full Unicode Chart.rar
Translate/: toc.py  translator.py
cogs/: acknowledgements.py  cocanb.py  messages.py  misc.py  moderation.py  testing.py  unicode.py
