[tool.poetry]
name = "cocanb-bot"
version = "0.1.0"
description = "A multipurpose bot created by Cocánb Altort for the new math elitism group (a.k.a. thCocáne m'pírno nèc bfèf) discord server and many others."
authors = ["Cocánb Altort"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
"discord.py" = "*"
discord = "^2.2.3"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
clipboard = "^0.0.4"
django-moderation = "^0.8.0"
docx2txt = "^0.8"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"